<resources>

    <string name="app_name">Fridge Friend</string>
    <string name="recipeActivity">Recipes</string>

    <!-- Overflow Menu -->
    <string name="log_ing">Login</string>
    <string name="submitRecipe">Submit Recipe</string>
    <string name="FridgeProfile">Fridge Profile</string>
    <string name="settings">Settings</string>
    <string name="action_search">Search</string>

    <!-- Login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Settings -->
    <string name="sync_title">Sync email periodically</string>
    <string name="reminder_title">Reminder to use ingredients</string>
    <string name="reminder_summary_on">Notifications will send as reminders to use ingredients listed in Fridge Profile </string>
    <string name="reminder_summary_off">No notifications will be sent as reminders to use ingredients listed in Fridge Profile</string>
    <string name="user_info_header">Profile Information</string>
    <string name="userName">User Name</string>
    <string name="notification_header">Notifications</string>
    <string name="filter_header">Recipe Filters Preferences</string>
    <string name="sort_title">Sort By</string>
    <string name="filter_title">Filter Out</string>

    <!-- Upload Recipes -->
    <string name="title_activity_upload_recipe">Upload Recipe</string>
    <string name="uploadInstructions">Recipes will be reviewed and uploaded manualy.</string>
    <string name="title_label_text">Recipe Title</string>
    <string name="enter_title_hint">Name of Recipe</string>
    <string name="time_label_string">Time</string>
    <string-array name="labels_array">
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
        <item>Months</item>
    </string-array>
    <string name="tagPrefrence_title">Tags</string>
    <string name="tag_label_string">Tags</string>
    <string name="tags">Tags</string>
    <string name="tag_peanuts">Peanuts</string>
    <string name="tag_glutten">Gluten</string>
    <string name="tag_meat">Meat</string>
    <string name="tag_dairy">Dairy</string>
    <string name="ingredients_label_string">Ingredients</string>
    <string name="instructions_label_string">Instructions</string>
    <string name="done_button">Done</string>
    <string-array name="ingredients_array">
        <item>lbs</item>
        <item>cups</item>
        <item>fl oz</item>
        <item>oz</item>
        <item>tbs</item>
        <item>tsp</item>
        <item>    </item>
    </string-array>

</resources>
