<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/user_info_header">
        <EditTextPreference
            app:key="userName"
            app:title="@string/userName"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notification_header">

        <SwitchPreferenceCompat
            app:key="reminder"
            app:summaryOff="@string/reminder_summary_off"
            app:summaryOn="@string/reminder_summary_on"
            app:title="@string/reminder_title" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/filter_header">

        <ListPreference
            app:defaultValue="leastMissing"
            app:entries="@array/sort_entries"
            app:entryValues="@array/sort_values"
            app:key="sort"
            app:title="@string/sort_title"
            app:useSimpleSummaryProvider="false" />
        <MultiSelectListPreference
            app:entries="@array/filter_entries"
            app:entryValues="@array/filter_values"
            app:key="filter"
            app:title="@string/filter_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
