<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_login"
        android:orderInCategory="10"
        android:title="@string/log_ing"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_recipe"
        android:orderInCategory="20"
        android:title="@string/submitRecipe"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_fprofile"
        android:orderInCategory="30"
        android:title="@string/FridgeProfile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="40"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="20"
        android:title="@string/action_search"
        app:showAsAction="always" />

</menu>