<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UploadRecipeActivity"
    tools:showIn="@layout/activity_upload_recipe">

    <TextView
        android:id="@+id/upload_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/uploadInstructions"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- recipe title -->
    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/title_label_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_textview" />
    <EditText
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/enter_title_hint"
        android:inputType="text|textCapWords|textAutoCorrect"
        app:layout_constraintBaseline_toBaselineOf="@+id/title_label"
        app:layout_constraintStart_toEndOf="@+id/title_label" />

    <!-- time -->
    <TextView
        android:id="@+id/time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/time_label_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />
    <EditText
        android:id="@+id/time_text"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/time_label"
        app:layout_constraintStart_toEndOf="@+id/time_label" />
    <Spinner
        android:id="@+id/label_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time_text"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <!-- tags -->
    <TextView
        android:id="@+id/tag_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/tag_label_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_label" />
    <CheckBox android:id="@+id/checkbox_peanuts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag_peanuts"
        android:onClick="onCheckboxClicked"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/tag_label"
        app:layout_constraintTop_toBottomOf="@+id/label_spinner" />
    <CheckBox android:id="@+id/checkbox_gluten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag_glutten"
        android:onClick="onCheckboxClicked"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/checkbox_peanuts"
        app:layout_constraintTop_toBottomOf="@+id/label_spinner" />
    <CheckBox android:id="@+id/checkbox_meat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag_meat"
        android:onClick="onCheckboxClicked"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/tag_label"
        app:layout_constraintTop_toBottomOf="@+id/tag_label" />
    <CheckBox android:id="@+id/checkbox_dairy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag_dairy"
        android:onClick="onCheckboxClicked"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/checkbox_meat"
        app:layout_constraintTop_toBottomOf="@+id/tag_label" />
    <!-- ingredients -->
    <TextView
        android:id="@+id/ingredients_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/ingredients_label_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_meat" />
    <EditText
        android:id="@+id/ingredients_text"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/ingredients_label"
        app:layout_constraintStart_toEndOf="@+id/checkbox_meat" />
    <Spinner
        android:id="@+id/ingredients_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ingredients_text"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_meat" />
    <EditText
        android:id="@+id/ingredients_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/ingredients_label"
        app:layout_constraintTop_toBottomOf="@+id/ingredients_text"/>

    <!-- instructions -->
    <TextView
        android:id="@+id/instructions_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/instructions_label_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredients_item" />
    <EditText
        android:id="@+id/instructions_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="text|textAutoComplete|textCapSentences|textAutoCorrect|textMultiLine"
        app:layout_constraintBaseline_toBaselineOf="@+id/instructions_label"
        app:layout_constraintStart_toEndOf="@+id/instructions_label" />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done_button"
        android:onClick="pleaseHideKeyboard"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/instructions_text"
        app:layout_constraintStart_toEndOf="@+id/instructions_text" />

</androidx.constraintlayout.widget.ConstraintLayout>